# pymininec

./: .gitignore  LICENSE  Makefile  README.rst  basic-notes.txt  check_f8  debug-basic.txt  debugscript  dipole-01.mini  mininec-done  mininec.py  plot-ff.py  pyproject.toml  setup.py
mininec/: mininec.py  plot_antenna.py  pulse.py  segment.py  taper.py  util.py
test/: .gitignore  12-el-5deg.pout  12-el.nout  12-el.pym  DP001.GNN  ada121535.py  dip-10s.Bout  dip-10s.bout  dip-10s.mini  dip-10s.pout  dip-10s.pym  dip-20s.Bout  dip-20s.bout  dip-20s.mini  dip-20s.pout  dip-20s.pym  dip-30s.Bout  dip-30s.bout  dip-30s.mini  dip-30s.pout  dip-30s.pym  dip-40s.Bout  dip-40s.bout  dip-40s.mini  dip-40s.pout  dip-40s.pym  dip-50s.Bout  dip-50s.mini  dip-50s.pout  dip-50s.pym  dip_coat.mini  dip_coat.pout  dip_coat.pym  dip_coat_scaled.pout  dip_coat_scaled.pym  dip_coat_yn.Bout  dip_coat_yn.mini  dip_coat_yn.pout  dip_coat_yn.pym  dip_loadwire.Bout  (+206 more)
